--- a/web/common/CSS/MobileSCSS/MBaseLayers.css
+++ b/web/common/CSS/MobileSCSS/MBaseLayers.css
@@ -64,7 +64,8 @@
 /* line 21, ../../scss/MobileSCSS/MBaseLayers.scss */
 #ulBaseLayers {
   padding: 5px;
-  border: 2px solid #a1a1a1;
+  border: 2px solid #0F2C55;
   border-radius: 10px;
   margin: 0.3em 0.2em;
+  background: rgba(15, 44, 85, 0.85);
 }
